package org.sazz.strategy

import org.sazz.pattern.Data_list
import org.sazz.pattern.student.Data_list_student_short
import org.sazz.student.Student
import org.sazz.student.Student_short
import java.io.File
import java.io.FileNotFoundException
import java.util.function.Predicate

/**
 * Класс для работы с коллекцией объектов Student и получения его из txt файла
 */
class Student_list_txt(students: MutableList<Student> = mutableListOf()) : Student_base_list(students) {

    /**
     * Метод для получения списка студентов из файла
     */
    override fun read_from_file(filePath: String) {
        val file = File(filePath)
        if (!file.exists() || !file.isFile) {
            throw IllegalArgumentException("Некорректный адрес файла: $filePath")
        }

        try {
            students = file.readLines().mapNotNull { line ->
                try {
                    Student(line)
                } catch (e: IllegalArgumentException) {
                    println("Ошибка при разборе строки: $line")
                    println("Причина: ${e.message}")
                    null
                }
            }.toMutableList()
        } catch (e: FileNotFoundException) {
            throw IllegalArgumentException("Файл не найден: $filePath")
        } catch (e: Exception) {
            throw IllegalArgumentException("Ошибка при чтении файла: ${e.message}")
        }
    }

    /**
     * Запись списка студентов в файл
     */
    override fun write_to_file(directory: String, fileName: String) {
        val file = File(directory, fileName)

        try {
            file.parentFile?.mkdirs() // Создаем директорию, если она не существует
            file.bufferedWriter().use { writer ->
                students.forEach { student ->
                    writer.write(student.toString())
                    writer.newLine()
                }
            }
        } catch (e: Exception) {
            throw IllegalArgumentException("Ошибка при записи в файл: ${e.message}")
        }
    }
}